# ServerMockCpp

./: .gitignore  CMakeLists.txt  conanfile.py
include/: CMakeLists.txt
include/server_mock/: request_mock.hpp  scoped_server.hpp  server_mock.hpp  types.hpp
include/server_mock/poco/: poco_fwd.hpp  request_handler_factory_poco.hpp  request_mock_poco.hpp  server_mock_poco.hpp  server_response_handler.hpp
src/: CMakeLists.txt
src/mocked_server/: mocked_server.cpp
src/server_mock/: request_mock.cpp  scoped_server.cpp  server_mock.cpp
src/server_mock/poco/: request_handler_factory_poco.cpp  request_mock_poco.cpp  server_mock_poco.cpp
tests/: CMakeLists.txt  server_mock_test.cpp
